# usharing_dlp_node

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  RSCL_BAG_SMOKE_TEST_REPORT.md  build.sh
app/: main_rscl.cpp  main_rscl_smoke.cpp  rscl_smoke_sap_stubs.cpp
common/: clock.hpp  logger.hpp
config/: rscl_config.cpp  rscl_config.hpp
core/: config.hpp  diagnostics.hpp
planning_core/: config.hpp  planning_engine.hpp  planning_service.cpp  planning_service.hpp  vehicle_state_machine.cpp  vehicle_state_machine.hpp
planning_sap/: sap_planning_engine.cpp  sap_planning_engine.hpp  sap_raii.cpp  sap_types.hpp
resource/: README.md
resource/config/dlp_node/thor/: planning_cfg
resource/config/dlp_node/x86/: planning_cfg  sys_cfg  topics_cfg
resource/config/perception_camera/nvidia/vd_dlp/: camera_bev_v9_7_ep12_aggregator.prototxt  camera_bev_v9_7_ep12_backbone.prototxt  camera_bev_v9_7_ep12_dlp.prototxt  camera_bev_v9_7_ep12_dlp_only_pre.prototxt  camera_bev_v9_7_ep12_dlp_produce_fillback.prototxt  camera_bev_v9_7_ep12_gop.prototxt  camera_bev_v9_7_ep12_occ_4in1.prototxt  camera_bev_v9_7_ep12_pvb.prototxt  camera_bev_v9_7_ep12_road.prototxt  camera_bev_v9_7_ep12_road_mapqr_post.prototxt  camera_bev_v9_7_ep12_road_mapseg_post.prototxt  lidar_bev_backbone.prototxt  lidar_camera_bev_fusion.prototxt
resource/config/perception_camera/x86/vd_mapqr_dlp/: camera_bev_v9_7_ep12_backbone.prototxt  camera_bev_v9_7_ep12_dlp.prototxt  camera_bev_v9_7_ep12_gop.prototxt  camera_bev_v9_7_ep12_occ_4in1.prototxt  camera_bev_v9_7_ep12_pvb.prototxt  camera_bev_v9_7_ep12_road.prototxt  camera_bev_v9_7_ep12_road_mapqr_post.prototxt  camera_bev_v9_7_ep12_road_mapseg_post.prototxt  fusion_lane.prototxt  lidar_bev_backbone.prototxt  lidar_camera_bev_fusion.prototxt
resource/config/x86/vd_mapqr_dlp/: camera_bev_v9_7_ep12_backbone.prototxt  camera_bev_v9_7_ep12_dlp.prototxt  camera_bev_v9_7_ep12_occ_4in1.prototxt  camera_bev_v9_7_ep12_pvb.prototxt  camera_bev_v9_7_ep12_road.prototxt  fusion_lane.prototxt
resource/licenses/perception_aggregator/: GAC_SENSEADAS.lic
resource/models/x86/vd_dlp/dlp_v1_009a9_rl_issue_aug_new/: ae_car_light_emb.txt  ae_traffic_light_emb.txt  ae_type_emb.txt  input_noise.txt  input_noise_fix_distance.txt  me_color_emb.txt  me_laneline_style_emb.txt  me_laneline_type_emb.txt  mean_std_all_5s_5hz.txt  parameters.json
resource/vehicle/default/: README.md
sap/: sap_planning_engine.cpp  sap_raii.cpp  sap_types.hpp
sdk/: README.md
sdk/sap_camera/include/perception_camera/: sap_camera.h  sap_camera_define.h  sap_image_info.h  sap_lidar_define.h  sap_macros.h  sap_radar_define.h
sdk/sap_camera/include/perception_camera/data_type/: base_type.h  localization_info.h
sdk/sap_camera/include/perception_camera/interface/: mdc_dvpp_dev.hpp
sdk/sap_common/include/perception_common/: general_interface.hpp
sdk/sap_common/include/perception_common/adapter/: device_adapter.hpp  ego_car_info_adapter.hpp
sdk/sap_common/include/perception_common/base/: class_helper.hpp  factory.hpp
sdk/sap_common/include/perception_common/data_association/: bipartite_graph_solver.hpp  greedy_search.hpp  kuhn_munkres.hpp  similarity_util.hpp
sdk/sap_common/include/perception_common/data_type/: odd_extra_info.hpp  sensor_info.hpp
sdk/sap_common/include/perception_common/dst_evidence/: base_dst_fusion.hpp  dst_existence_fusion.hpp  dst_type_fusion.hpp
sdk/sap_common/include/perception_common/log/: common_log.hpp  error.hpp
sdk/sap_common/include/perception_common/math_helper/: angle_util.hpp  bbox_util.hpp  cluster_util.hpp  general_math_util.hpp  (+4 more)
smoke_test_scripts/: build_smoke_test.sh  play_rsclbag.sh  start_smoke_test.sh
transport/: transport.hpp
transport/ros2/: ros2_transport.cpp  ros2_transport.hpp
transport/rscl/: rscl_access.cpp  rscl_access.hpp  rscl_planning_transport.cpp  rscl_planning_transport.hpp
transport/rscl/converters/: amap_navi_info_converter.cpp  amap_navi_info_converter.hpp  converter_common.hpp  diag_converter.cpp  diag_converter.hpp  fusion_object_frame_converter.cpp  fusion_object_frame_converter.hpp  lidar_gop_frame_converter.cpp  lidar_gop_frame_converter.hpp  local_localization_converter.cpp  local_localization_converter.hpp  location_info_converter.cpp  location_info_converter.hpp  object_common.cpp  object_common.hpp  object_frame_converter.cpp  object_frame_converter.hpp  occupancy_info_converter.cpp  occupancy_info_converter.hpp  output_sequence_state.hpp  planning_debug_converter.cpp  planning_debug_converter.hpp  prediction_converter.cpp  prediction_converter.hpp  road_geometry_frame_converter.cpp  road_geometry_frame_converter.hpp  scene_navi_map_converter.cpp  scene_navi_map_converter.hpp  vehicle_processing_converter.cpp  vehicle_processing_converter.hpp  vehicle_report_converter.cpp  vehicle_report_converter.hpp
transport/rscl/subscribers/amap_navi_info/: amap_navi_info_subscriber.cpp  amap_navi_info_subscriber.hpp
transport/rscl/subscribers/fusion_object_frame/: fusion_object_frame_subscriber.cpp  fusion_object_frame_subscriber.hpp
transport/rscl/subscribers/lidar_gop_frame/: lidar_gop_frame_subscriber.cpp  lidar_gop_frame_subscriber.hpp
transport/rscl/subscribers/local_localization/: local_localization_subscriber.cpp  local_localization_subscriber.hpp
transport/rscl/subscribers/location_info/: location_info_subscriber.cpp  location_info_subscriber.hpp
transport/rscl/subscribers/object_frame/: object_frame_subscriber.cpp  object_frame_subscriber.hpp
transport/rscl/subscribers/occupancy_info/: occupancy_info_subscriber.cpp  occupancy_info_subscriber.hpp
transport/rscl/subscribers/road_geometry_frame/: road_geometry_frame_subscriber.cpp  road_geometry_frame_subscriber.hpp
transport/rscl/subscribers/scene_navi_map/: scene_navi_map_subscriber.cpp  scene_navi_map_subscriber.hpp
transport/rscl/subscribers/vehicle_processing/: vehicle_processing_subscriber.cpp  vehicle_processing_subscriber.hpp
transport/rscl/subscribers/vehicle_report/: vehicle_report_subscriber.cpp  vehicle_report_subscriber.hpp
(+163 files in other folders)
